css/styling.css
html, body{
    margin: 0;

    padding: 0;

    min-width: 100%;
    width: 100%;
    max-width: 100%;

    min-height: 100%;
    height: 100%;
    max-height: 100%;
}

#wrapper {
  text-align: center;
}

#Window2, #Window3 {
    display:none;
}

h1{
  width: 100%;     /* specify a width! */
  margin: 0 auto; /* center */
  text-align: center;
  color: #666;
}

#bigP {
    color: #ffffff;
    font-size:5em;
    display: inline;
}
#title {
    color: #ffffff;
    font-size:5em;
    display: inline;
}

#subtitle {
    color: #ffffff;
    font-size:2em;
}

p {
  width: 100%;     /* specify a width! */
  margin: 0 auto; /* center */
  text-align: center;
  min-height: 10px;
}

input {
  width: 60%;     /* specify a width! */
  margin: auto; /* center */
  text-align: center;
}


#inputdomain, #inputproblem, #inputplan {
  border: 3px dashed #ccc;
  padding: 10px;
  background: #fff;
  min-height: 100px;
/*  overflow-y: auto;*/
}

#Window1, #Window2, #Window3 {
    height:100%;
}

@import url(http://fonts.googleapis.com/css?family=Open+Sans);
@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);

body {
  font-family: 'Source Sans Pro', sans-serif;
  color: #666;
}

/*Styling for items in the selection list (Objects, predicates, etc)*/
.item {
  font-size: 1.5em;
  padding: 5px;
}

.itemGroup {
  font-size: 1.7em;
  font-weight: bold;
  padding: 5px;

}

#inputSelector {
  overflow-y:scroll;
  text-align:center;
  height:100%;
}

#loadfiles {
  background-color: #4CAF50; /* Green */
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 2em;
  border-radius: 25px;
}

#inputTable {
  margin: 25px auto auto auto;
}

#inputOptions {
}

.selected {
  background-color: rgb(176, 255, 186);
}

.item:hover {
  background-color: rgb(222, 222, 222);
}

